# minim

./: Cargo.toml  flake.nix
assets/: config.toml  theme.toml
src/: cache.rs  config.rs  files.rs  lib.rs  main.rs  paths.rs  player.rs  theme.rs  track.rs
