[package]
name = "minim"
version = "0.1.0"
description = "A lightweight TUI music player"
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
csv = "1.3.1"
dirs = "6.0.0"
image = "0.25.8"
lofty = "0.22.1"
ratatui = "0.29.0"
ratatui-image = "8.0.1"
rodio = { version = "0.21" }
serde =  { version = "1.0.217", features = [ "derive" ] }
walkdir = "2.5.0"
